Fix margins and alt buffer mode switching.
Lesson learned: do not resize the line and alt buffers to different sizes!
This will end up lopping the midnight commander endlessly as he switches to
line mode after a resize in appmode.
Fix: always show the scrollbar: in line and alt buffer mode.

--- a/schirm/resources/user.css
+++ b/schirm/resources/user.css
@@ -63,6 +63,10 @@
 
 /* min scrollbar */
 
+body {
+    overflow-y:scroll;
+}
+
 body::-webkit-scrollbar {
     width: 6px;
 }
